[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/forge/gui/item_creation_menu/ItemCreationMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/state/States.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/ControlMenu.gd" type="Script" id=4]

[node name="ItemCreationMenu" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="States" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 688.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="InitialItemSetupMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1216.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1216.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_right = 808.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Item Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ItemNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 400.0
margin_bottom = 42.0
rect_min_size = Vector2( 400, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
max_length = 255
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Item Name"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 58.0
margin_right = 808.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer/VBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Item Description"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ItemDescriptionInput" type="LineEdit" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/VBoxContainer/VBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 400.0
margin_bottom = 42.0
rect_min_size = Vector2( 400, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
max_length = 255
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Item Description"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="ItemTypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 461.0
margin_top = 132.0
margin_right = 755.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="WeaponItemButton" type="Button" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/ItemTypeContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "WEAPON"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="ArmorItemButton" type="Button" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/ItemTypeContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 294.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "ARMOR"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="WeaponTypeContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 393.0
margin_top = 234.0
margin_right = 822.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="WeaponSwordItemButton" type="Button" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/WeaponTypeContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 127.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SWORD"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="WeaponAxeItemButton" type="Button" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/WeaponTypeContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_right = 261.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "AXE"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="WeaponHammerItemButton" type="Button" parent="MarginContainer/VBoxContainer/InitialItemSetupMenu/WeaponTypeContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 293.0
margin_right = 429.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HAMMER"
icon = ExtResource( 3 )
flat = false
align = 1

[node name="ControlMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 596.0
margin_right = 1216.0
margin_bottom = 656.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 10
custom_constants/separation = 32
alignment = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ControlMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CANCEL"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ControlMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 984.0
margin_right = 1084.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 10
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/ControlMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1116.0
margin_right = 1216.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "NEXT"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]


